# db_from_scratch

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  scratchdb.cppm  scratchdb_commands.cppm  scratchdb_constants.cppm  scratchdb_errors.cppm  scratchdb_pager.cppm  scratchdb_row.cppm  scratchdb_serialize.cppm  scratchdb_statements.cppm  scratchdb_table.cppm  scratchdb_types.cppm  scratchdb_vm.cppm
tests/: CMakeLists.txt  test_base_functionalities.cpp
